# fix_random_spaces

./: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
fix_random_spaces/: __init__.py  cli.py  model.py  utils.py
tests/: __init__.py  test_fix_random_spaces.py
