[metadata]
name = fix-random-spaces
description =
    Fixes random spaces in text
long-description = file: README.md
author = Laksh
author_email = lakshaithanii@gmail.com
url = https://github.com/aced125/fix_random_spaces

[options]
setup_requires =
    setuptools_scm>=3.2
    pytest-runner
install_requires =
    Click
    torch
    pytorch-lightning
    transformers
    nlp
    torch_optimizer
    omegaconf
    wandb

[options.extras_require]
tests =
    pytest>=4
    pytest-cov>=2.6
    pytest-black>=0.3.8
    pytest-ordering>=0.6
    coverage-badge
docs =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    fix_random_spaces = fix_random_spaces.cli:cli

[coverage:run]
source = fix_random_spaces

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:fix_random_spaces/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

